--- a/site/blog.css
+++ b/site/blog.css
@@ -164,3 +164,18 @@ h6, .h6 {
 .blog-footer p:last-child {
   margin-bottom: 0;
 }
+
+
+
+
+
+.red{
+    color:red;
+    }
+.form-area
+{
+    background-color: solid WHITE;
+  padding: 10px 40px 60px;
+  margin: 10px 0px 60px;
+  border: 1px solid GREY;
+  }
