--- a/angular/src/app/ListingSidebar/listingSidebar.component.html
+++ b/angular/src/app/ListingSidebar/listingSidebar.component.html
@@ -4,8 +4,8 @@
             <h5>How To Apply</h5>
             <p>Email,Phone, or <a href="#">link</a></p>
             <h5>Contact Info</h5>
-            <p>Email: Example@example.com</p>
-            <p>Phone: (111)-111-1111</p>
+            <p>Email: {{contactInfo.email}}</p>
+            <p>Phone: {{contactInfo.phone}}</p>
 
           </div>
 
