--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,2 +1,23 @@
-  <app-listing></app-listing>
-  <app-listing-sidebar></app-listing-sidebar>
+
+<div class="container">
+
+  <div class="row">
+
+    <div class="col-sm-8 blog-main">
+
+
+	  <app-listing></app-listing>
+
+	</div><!-- /.blog-main -->
+
+	<div class="col-sm-4 blog-sidebar">
+
+		<app-listing-sidebar></app-listing-sidebar>
+
+	</div><!-- /.side-bar -->
+
+        
+
+  </div><!-- /.row -->
+
+</div><!-- /.container -->
