listing component html objects added

--- a/angular/src/app/Listing/listing.component.html
+++ b/angular/src/app/Listing/listing.component.html
@@ -1,32 +1,25 @@
 
           <div class="blog-post">
-            <h2 class="blog-post-title">Sample Job Listing</h2>
+            <h2 class="blog-post-title">{{jobInfo.title}}</h2>
             <p class="blog-post-meta">August 22, 2017 by Sameer</p>
-            <p class="blog-post-meta">Full Time, Location</p>
+            <p class="blog-post-meta">{{jobInfo.jobType}}, {{jobInfo.location}}</p>
 
             <h5>Job Description</h5>
-            <p>Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text
-            Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text
-
-            Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text</p>
+            <p>{{jobInfo.description}}</p>
             
             <hr>
             <h5>Salary</h5>
-            <p>$786/hr</p>
+            <p>${{jobInfo.salary}}/hr</p>
             <hr>
             
             <h5>Qualifications</h5>
-            <li>B.S. in BS</li>
-            <li>Prior Work Experience</li>
-            <li>Like to Work</li>
-            <li>Sample Text</li>
+            <li>{{jobInfo.qualifications}}</li>
             <hr>
 
             <h5>Job Type</h5>
-            <p>Full Time</p>
+            <p>{{jobInfo.jobType}}</p>
             <hr>
-            <h5>Job Ttile</h5>
-            <p>HTML Designer</p>
+
 
             
           </div><!-- /.blog-post -->
