--- a/angular/src/app/Listing/listing.component.html
+++ b/angular/src/app/Listing/listing.component.html
@@ -1,23 +1,23 @@
 
-          <div class="blog-post">
-            <h2 class="blog-post-title">{{jobInfo.title}}</h2>
+          <div class="blog-post" >
+            <h2 class="blog-post-title">{{jobInfo.JobInfo.title}}</h2>
             <p class="blog-post-meta">August 22, 2017 by Sameer</p>
-            <p class="blog-post-meta">{{jobInfo.jobType}}, {{jobInfo.location}}</p>
+            <p class="blog-post-meta">{{jobInfo.JobInfo.jobType}}, {{jobInfo.JobInfo.location}}</p>
 
             <h5>Job Description</h5>
-            <p>{{jobInfo.description}}</p>
+            <p>{{jobInfo.JobInfo.description}}</p>
             
             <hr>
             <h5>Salary</h5>
-            <p>${{jobInfo.salary}}/hr</p>
+            <p>{{jobInfo.JobInfo.salary}}/hr</p>
             <hr>
             
             <h5>Qualifications</h5>
-            <li>{{jobInfo.qualifications}}</li>
+            <li>{{jobInfo.JobInfo.qualifications}}</li>
             <hr>
 
             <h5>Job Type</h5>
-            <p>{{jobInfo.jobType}}</p>
+            <p>{{jobInfo.JobInfo.jobType}}</p>
             <hr>
 
 
