--- a/angular/src/app/ListingSidebar/listingSidebar.component.css
+++ b/angular/src/app/ListingSidebar/listingSidebar.component.css
@@ -1,15 +1,7 @@
-/*
- * Main column and sidebar layout
- */
 
-/* Sidebar modules for boxing content */
-.sidebar-module {
-  padding: 1rem;
-  /*margin: 0 -1rem 1rem;*/
-}
 .sidebar-module-inset {
   padding: 1rem;
-  background-color: #f5f5f5;
+  background-color: #f5f5f5;a
   border-radius: .25rem;
 }
 .sidebar-module-inset p:last-child,
