--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<body>
 <div class="container">
 
   <div class="row">
@@ -20,4 +20,5 @@
 
   </div><!-- /.row -->
 
-</div><!-- /.container -->
+</div> <!-- /.container -->
+</body>
