--- a/angular/src/app/ListingSidebar/listingSidebar.component.html
+++ b/angular/src/app/ListingSidebar/listingSidebar.component.html
@@ -3,7 +3,7 @@
             <h5>How To Apply</h5>
             <p>Email,Phone, or <a href="#">link</a></p>
             <h5>Contact Info</h5>
-            <p>Email: {{contactInfo.email}}</p>
-            <p>Phone: {{contactInfo.phone}}</p>
+            <p>Email: {{jobListing.email}}</p>
+            <p>Phone: {{jobListing.phone}}</p>
 
           </div>
