--- a/angular/src/app/Listing/listing.component.html
+++ b/angular/src/app/Listing/listing.component.html
@@ -1,23 +1,23 @@
 
           <div class="blog-post" >
-            <h2 class="blog-post-title">{{jobListing.title}}</h2>
-            <p class="blog-post-meta">August 22, 2017 by {{jobListing.firstName}} {{jobListing.lastName}}</p>
-            <p class="blog-post-meta">{{jobListing.jobType}}, {{jobListing.location}}</p>
+            <h2 class="blog-post-title">{{jobListing.JobListing.title}}</h2>
+            <p class="blog-post-meta">August 22, 2017 by {{jobListing.JobListing.firstName}} {{jobListing.JobListing.lastName}}</p>
+            <p class="blog-post-meta">{{jobListing.JobListing.jobType}}, {{jobListing.JobListing.location}}</p>
 
             <h5>Job Description</h5>
-            <p>{{jobListing.description}}</p>
+            <p>{{jobListing.JobListing.description}}</p>
             
             <hr>
             <h5>Salary</h5>
-            <p>{{jobListing.salary}}/hr</p>
+            <p>{{jobListing.JobListing.salary}}/hr</p>
             <hr>
             
             <h5>Qualifications</h5>
-            <li>{{jobListing.qualifications}}</li>
+            <li>{{jobListing.JobListing.qualifications}}</li>
             <hr>
 
             <h5>Job Type</h5>
-            <p>{{jobListing.jobType}}</p>
+            <p>{{jobListing.JobListing.jobType}}</p>
             <hr>
 
 
