listing page in listings

--- a/angular/src/app/ListingSidebar/listingSidebar.component.html
+++ b/angular/src/app/ListingSidebar/listingSidebar.component.html
@@ -1,7 +1,7 @@
 
           <div class="sidebar-module sidebar-module-inset">
             <h5>How To Apply</h5>
-            <p>Email,Phone, or <a href="#">link</a></p>
+            <p>{{jobListing.JobListing.apply}}</p>
             <h5>Contact Info</h5>
             <p>Email: {{jobListing.JobListing.email}}</p>
             <p>Phone: {{jobListing.JobListing.phone}}</p>
