--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -3,19 +3,9 @@
 
   <div class="row">
 
-    <div class="col-sm-8 blog-main">
 
 
-	  <app-listing></app-listing>
-
-	</div><!-- /.blog-main -->
-
-	<div class="col-sm-4 blog-sidebar">
-
-		<app-listing-sidebar></app-listing-sidebar>
-
-	</div><!-- /.side-bar -->
-
+		<router-outlet></router-outlet>
         
 
   </div><!-- /.row -->
