--- a/angular/src/app/Listing/listing.component.css
+++ b/angular/src/app/Listing/listing.component.css
@@ -1,5 +1,35 @@
 
 
+
+/*
+ * Override Bootstrap's default container.
+ */
+
+.container {
+  max-width: 60rem;
+}
+
+
+/*
+ * Main column and sidebar layout
+ */
+
+/* Sidebar modules for boxing content */
+.sidebar-module {
+  padding: 1rem;
+  /*margin: 0 -1rem 1rem;*/
+}
+
+
+/* Pagination */
+.blog-pagination {
+  margin-bottom: 4rem;
+}
+.blog-pagination > .btn {
+  border-radius: 2rem;
+}
+
+
 .blog-post {
   margin-bottom: 4rem;
 }
@@ -12,3 +42,14 @@
   color: #999;
 }
 
+
+.sidebar-module-inset {
+  padding: 1rem;
+  background-color: #f5f5f5;a
+  border-radius: .25rem;
+}
+.sidebar-module-inset p:last-child,
+.sidebar-module-inset ul:last-child,
+.sidebar-module-inset ol:last-child {
+  margin-bottom: 0;
+}
