navbar and new listing page added

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,13 +1,10 @@
+<nav-bar></nav-bar>
+
 <body>
+
+
 <div class="container">
-
-
-
-
 		<router-outlet></router-outlet>
-        
-
-
 
 </div> <!-- /.container -->
 </body>
