--- a/angular/src/app/allListings/all-listings.component.html
+++ b/angular/src/app/allListings/all-listings.component.html
@@ -7,7 +7,7 @@
 
             <h1>Job Offers</h1>
             <hr>
-            <button class="button" *ngFor="let listing of jobListings">
+            <button [routerLink]="['../listing/', listing.id]" class="button" *ngFor="let listing of jobListings">
                 <div class="job-listing">
                     <h3>{{listing.title}}</h3>
                     <div align="left">Nisum</div> 
