--- a/angular/src/app/Listing/listing.component.css
+++ b/angular/src/app/Listing/listing.component.css
@@ -32,6 +32,8 @@
 
 .blog-post {
   margin-bottom: 4rem;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: lighter;
 }
 .blog-post-title {
   margin-bottom: .25rem;
@@ -40,6 +42,7 @@
 .blog-post-meta {
   margin-bottom: 1.25rem;
   color: #999;
+
 }
 
 
