--- a/angular/src/app/navbar/navbar.component.html
+++ b/angular/src/app/navbar/navbar.component.html
@@ -3,29 +3,15 @@
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-3">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Nisum</a>
+<img src="https://congreso.chile-digital.com/wp-content/themes/chiledigital/images/expodigital/440/nisum.jpg" height="50">
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar-collapse-3">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">New Listing</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Works</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
-        <li>
-          <a class="btn btn-default btn-outline btn-circle"  data-toggle="collapse" href="#nav-collapse3" aria-expanded="false" aria-controls="nav-collapse3">Search</a>
-        </li>
-      </ul>
-      <div class="collapse nav navbar-nav nav-collapse" id="nav-collapse3">
+    <ul class="nav navbar-nav navbar-left">
+        <li><a href="#">All Listings</a></li>
+        <li><a href="#">Add Listing</a></li>
+        </ul>
+
         <form class="navbar-form navbar-right" role="search">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search" />
@@ -33,8 +19,6 @@
           <button type="submit" class="btn btn-danger"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
         </form>
       </div>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container -->
 </nav><!-- /.navbar -->
 
 
