--- a/angular/src/app/navbar/navbar.component.html
+++ b/angular/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-<img src="https://congreso.chile-digital.com/wp-content/themes/chiledigital/images/expodigital/440/nisum.jpg" height="50">
+    <img src="./logo_test.png">
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
