--- a/angular/src/app/navbar/navbar.component.html
+++ b/angular/src/app/navbar/navbar.component.html
@@ -3,7 +3,10 @@
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-    <img src="./logo_test.png">
+    <!--img src="images/logo_test.png" height="50"-->
+<img height="50" src="{{str}}">
+
+
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
