--- a/angular/src/app/navbar/navbar.component.html
+++ b/angular/src/app/navbar/navbar.component.html
@@ -8,8 +8,10 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <ul class="nav navbar-nav navbar-left">
-        <li><a href="#">All Listings</a></li>
-        <li><a href="#">Add Listing</a></li>
+        <li><a [routerLink]="['../allListings']"
+                routerLinkActive="active">All Listings</a></li>
+        <li><a [routerLink]="['../newListing']"
+                routerLinkActive="active">Add Listing</a></li>
         </ul>
 
         <form class="navbar-form navbar-right" role="search">
