--- a/angular/src/app/allListings/all-listings.component.css
+++ b/angular/src/app/allListings/all-listings.component.css
@@ -10,7 +10,7 @@
 .button
 {
   width: 100%;
-  background-color: #e6f2ff; /* Green */
+  background-color: #e6f2ff; /* pink */
 
   margin: 0px 0px 10px;
   border: 1px solid BLACK;
