--- a/angular/src/app/newListing/newListing.component.html
+++ b/angular/src/app/newListing/newListing.component.html
@@ -36,6 +36,15 @@
 
                                      type="text" class="form-control" id="mobile" name="phone" placeholder="Phone Number" required>
 					</div>
+
+                    <div class="form-group">
+                        <input [(ngModel)]="jobListing.location"
+                                     required
+                                     #phone="ngModel"
+
+                                     type="text" class="form-control" id="mobile" name="location" placeholder="Location" required>
+                    </div>
+
 					<div class="form-group">
 						<input [(ngModel)]="jobListing.title"
                                      required
