--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -11,6 +11,7 @@
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: #555;
+
 }
 
 h1, .h1,
@@ -20,7 +21,7 @@ h4, .h4,
 h5, .h5,
 h6, .h6 {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: normal;
+  font-weight: 400;
   color: #333;
 }
 
