--- a/angular/src/app/Listing/listing.component.css
+++ b/angular/src/app/Listing/listing.component.css
@@ -22,6 +22,8 @@
   margin-bottom: 4rem;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: lighter;
+  font-size: 12pt;
+
 }
 .blog-post-title {
   margin-bottom: .25rem;
@@ -33,13 +35,23 @@
 
 }
 
+.blog-sidebar{
+  overflow-wrap:break-word;
+
+}
+
 .sidebar-module-inset {
-  padding: 1rem;
+  padding: 1.5rem;
   background-color: #f5f5f5;a
   border-radius: .25rem;
+  font-size: 12pt;
+
 }
 .sidebar-module-inset p:last-child,
 .sidebar-module-inset ul:last-child,
 .sidebar-module-inset ol:last-child {
   margin-bottom: 0;
+}
+h2, .h2 {
+  font-size: 1.75rem;
 }
