--- a/angular/src/app/Listing/listing.component.html
+++ b/angular/src/app/Listing/listing.component.html
@@ -34,7 +34,7 @@
         </div><!-- /.blog-main -->
 
 
-        <div class="col-sm-4 blog-sidebar">
+        <div class="col-sm-offset-1 col-sm-3 blog-sidebar">
 
             <div class="sidebar-module sidebar-module-inset" *ngIf="jobListing" >
                 <h5>How To Apply</h5>
