--- a/angular/src/app/allListings/all-listings.component.html
+++ b/angular/src/app/allListings/all-listings.component.html
@@ -7,10 +7,14 @@
 
             <h2>Job Offers</h2>
             <hr>
+
+            <!--input type="text" [(ngModel)]="search">
+                <div *ngFor = "let listing of jobListings |filter:search"-->
+
             <button [routerLink]="['../listing/', listing._id]" class="button" *ngFor="let listing of jobListings">
                 <div class="job-listing">
                     <h4>{{listing.title}}</h4>
-                    <div align="left">Nisum</div> 
+                    <div align="left">{{listing.company}}</div> 
                     <div align="left">{{listing.location}}</div>
                     <div align="right">Posted: Yesterday </div>
                 </div>
