--- a/angular/src/app/newListing/newListing.component.html
+++ b/angular/src/app/newListing/newListing.component.html
@@ -40,9 +40,17 @@
                     <div class="form-group">
                         <input [(ngModel)]="jobListing.location"
                                      required
-                                     #phone="ngModel"
+                                     #location="ngModel"
 
                                      type="text" class="form-control" id="mobile" name="location" placeholder="Location" required>
+                    </div>
+
+                    <div class="form-group">
+                        <input [(ngModel)]="jobListing.company"
+                                     required
+                                     #company="ngModel"
+
+                                     type="text" class="form-control" id="mobile" name="company" placeholder="Company" required>
                     </div>
 
 					<div class="form-group">
