Company Name, Date, and Footer

--- a/angular/src/app/Listing/listing.component.html
+++ b/angular/src/app/Listing/listing.component.html
@@ -9,7 +9,7 @@
 
             <div class="blog-post" *ngIf="jobListing" >
                 <h2>{{jobListing.title}}</h2>
-                <p class="blog-post-meta">August 22, 2017 by {{jobListing.firstName}} {{jobListing.lastName}}</p>
+                <p class="blog-post-meta">{{jobListing.dates}} by {{jobListing.firstName}} {{jobListing.lastName}}</p>
                 <p class="blog-post-meta">{{jobListing.jobType}}, {{jobListing.location}}</p>
 
                 <h4>Job Description</h4>
