--- a/angular/src/app/allListings/all-listings.component.html
+++ b/angular/src/app/allListings/all-listings.component.html
@@ -16,7 +16,7 @@
                     <h4>{{listing.title}}</h4>
                     <div align="left">{{listing.company}}</div> 
                     <div align="left">{{listing.location}}</div>
-                    <div align="right">Posted: Yesterday </div>
+                    <div align="right">Posted: {{listing.dates}} </div>
                 </div>
             </button>
             <br>
