--- a/angular/src/app/Footer/footer.component.html
+++ b/angular/src/app/Footer/footer.component.html
@@ -1,6 +1,6 @@
- <footer class="blog-footer">
+ <div class="blog-footer">
       <p><a href="http://www.nisum.com/">© 2017 Nisum Technologies, Inc.</a></p>
       <p>
         <a href="#">Back to top</a>
       </p>
-    </footer>
+    </div>
