--- a/angular/src/app/navbar/navbar.component.html
+++ b/angular/src/app/navbar/navbar.component.html
@@ -26,10 +26,7 @@
           <button  class="btn btn-danger" ><span class="glyphicon glyphicon-search"  aria-hidden="true"></span></button>
         </form>
       </div>
-</nav><!-- /.navbar (ngSubmit)="onSubmit()" type="submit"
- [(ngModel)]="searchString"
-                                     #searchString="ngModel" 
-                                      -->
+</nav>
 
 
 
