--- a/angular/src/app/Listing/listing.component.css
+++ b/angular/src/app/Listing/listing.component.css
@@ -57,6 +57,8 @@ pre {
   background-color: #f5f5f5;a
   border-radius: .25rem;
   font-size: 12pt;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: lighter;
 
 }
 .sidebar-module-inset p:last-child,
